<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/mail_addressView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mail_addressTitle"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/mail_addressLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        app:layout_constraintTop_toBottomOf="@id/mail_addressView"
        app:layout_constraintLeft_toLeftOf="parent" >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/mail_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mail_sampleAddress"
            android:inputType="textEmailAddress"
            android:singleLine="false" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/mail_subjectView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mail_subjectTitle"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:layout_constraintTop_toBottomOf="@id/mail_addressLayout"
        app:layout_constraintLeft_toLeftOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/mail_subjectLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        app:layout_constraintTop_toBottomOf="@id/mail_subjectView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/mail_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:hint="@string/mail_sampleSubject"
            android:inputType="textEmailSubject"
            android:singleLine="false" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/mail_bodyView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mail_bodyTitle"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:layout_constraintTop_toBottomOf="@id/mail_subjectLayout"
        app:layout_constraintLeft_toLeftOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/mail_bodyLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        app:layout_constraintTop_toBottomOf="@id/mail_bodyView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/mail_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:hint="@string/mail_sampleBody"
            android:inputType="textMultiLine"
            android:singleLine="false" />

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/mail_sendButton"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/mail_send"
        app:layout_constraintLeft_toLeftOf="@id/mail_bodyLayout"
        app:layout_constraintRight_toRightOf="@id/mail_bodyLayout"
        app:layout_constraintTop_toBottomOf="@id/mail_bodyLayout"/>

</android.support.constraint.ConstraintLayout>